add some new features

--- a/css/style.css
+++ b/css/style.css
@@ -102,3 +102,23 @@ li {
   padding: 16px 41px;
   color: white;
 }
+
+.explore {
+  background: url(/img/abstract-geometric-line-background_889452-56807.avif);
+}
+.explore-numbers {
+  color: white;
+}
+.reviews-cards {
+  display: flex;
+  justify-content: center;
+}
+.reviews-cards-item {
+  width: 255px;
+  height: 292px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 49px 9px 29px 18px;
+  border-radius: 15px;
+}
