--- a/style.scss
+++ b/style.scss
@@ -1,8 +1,17 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+
 
 * {
     margin: 0;
     padding: 0;
+
+}
+a{
+   text-decoration: none;
+}
+html{
+    scroll-behavior: smooth;
 }
 
 .header {
@@ -202,66 +211,6 @@
         color: #333;
     }
 
-    &-slider {
-        width: 810px;
-        height: 540px;
-        overflow: hidden;
-        border: 3px solid #333;
-        border-radius: 10px;
-        margin: 0 auto 20px auto;
-        position: relative;
-
-        &-wrapper {
-            display: flex;
-            height: 600px;
-            transition: transform 0.3s ease;
-
-            &-part {
-                min-width: 810px;
-                height: 540px;
-                background: #eee;
-                border-right: 1px solid #ccc;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                font-size: 24px;
-                font-weight: bold;
-
-                &__img {
-                    height: 100%;
-                    width: 100%;
-                }
-            }
-        }
-
-        &-modal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.6);
-            align-items: center;
-            justify-content: center;
-
-            &-content {
-                padding: 20px;
-                border-radius: 10px;
-                position: relative;
-                min-width: 300px;
-
-                &-close {
-                    position: absolute;
-                    top: 10px;
-                    right: 20px;
-                    font-size: 30px;
-                    cursor: pointer;
-                }
-            }
-        }
-    }
-
     &-number {
         color: #333;
 
@@ -288,6 +237,8 @@
         &-cards {
             display: flex;
             justify-content: space-between;
+            padding-left: 120px;
+            padding-right: 120px;
             &-item{
                 width: 20%;
                 box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
@@ -311,7 +262,7 @@
         font-size: 30px;
     }
 
-    &-cards {
+    &-card {
         display: flex;
         justify-content: space-between;
         padding: 20px 120px;
@@ -325,7 +276,18 @@
             justify-content: space-between;
             padding: 49px 9px 29px 18px;
             border-radius: 15px;
+            &-avatar{
+                height: 20px;
+                width: 20px;
+            }
+            &-desc{
+                &-dop{
+                    color: #DD2242;
+                    font-weight: 900;
+                    font-family: "Bangers", system-ui;
 
+                }
+            }
             &:nth-child(1) {
                 box-shadow: rgba(240, 46, 170, 0.4) -5px 5px, rgba(240, 46, 170, 0.3) -10px 10px, rgba(240, 46, 170, 0.2) -15px 15px, rgba(240, 46, 170, 0.1) -20px 20px, rgba(240, 46, 170, 0.05) -25px 25px;
             }
